# su-exec

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.test  INSTALL.md  LICENSE  Makefile  README.md  build.sh  su-exec  su-exec.1  su-exec.c  test-results.txt  test.sh
.github/workflows/: build.yaml  release.yaml
include/: static_assert.h  static_assert_counter.h
packaging/: env.list  run_tests  setup_tests
packaging/centos-7/: build
packaging/centos-7/build-image/: Dockerfile
packaging/centos-7/build-inside/: build-package
packaging/centos-7/test-image/: Dockerfile
packaging/debian-jessie/build-image/: Dockerfile
packaging/debian-jessie/build-inside/: build-package
packaging/debian-jessie/test-image/: Dockerfile
packaging/fedora-23/build-image/: Dockerfile
packaging/fedora-23/build-inside/: build-package
packaging/fedora-23/test-image/: Dockerfile
packaging/ubuntu-trusty/: build
packaging/ubuntu-trusty/build-image/: Dockerfile
packaging/ubuntu-trusty/build-inside/: build-package
packaging/ubuntu-trusty/test/: Dockerfile.test  test.sh
packaging/ubuntu-trusty/test-image/: Dockerfile
packaging/ubuntu-xenial/: build
packaging/ubuntu-xenial/build-image/: Dockerfile
packaging/ubuntu-xenial/build-inside/: build-package
packaging/ubuntu-xenial/test-image/: Dockerfile
src/: Makefile  su-exec.c
